--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-full-page": "^0.1.12",
     "react-router-dom": "^6.12.0",
     "styled-components": "^6.0.0-rc.3",
+    "swiper": "^9.4.1",
     "vite-bundle-visualizer": "^0.7.0"
   },
   "devDependencies": {
@@ -35,7 +35,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
-    "react-full-page": "^0.1.12",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
