--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.12.0",
     "styled-components": "^6.0.0-rc.3",
     "swiper": "^9.4.1",
-    "vite-bundle-visualizer": "^0.7.0"
+    "vite-bundle-visualizer": "^0.7.0",
+    "antd": "^5.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
